creacion de formulario en update.php

--- a/activos/css/style.css
+++ b/activos/css/style.css
@@ -44,3 +44,11 @@ header a {
     text-decoration: none;
     color: #333;
 }
+
+.header_logo {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    border: red solid 1px;
+    margin: 0 0 0 2px;
+}
